<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginTop="215dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/txt_empty"
        android:src="@drawable/charlie_chaplin_64_icon"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_splash_title"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:padding="20dp"
        android:fontFamily="cursive"/>


    <TextView
        android:id="@+id/text_splash_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170sp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/txt_creator"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"
        android:fontFamily="sans-serif"/>

</LinearLayout>